# plotter

./: .gitignore  README.md  pyproject.toml
plotter/: __init__.py  bars.py  canvas.py  drawable.py  histograms.py  images.py  lines.py  scatter.py  text.py
plotter/data/: blueprint.txt  log_config.json  text_example.json
plotter/helpers/: __init__.py  constants.py  initialization.py  text.py  useful_functions.py
src/plotter/: __init__.py  canvas.py  functions.py  histograms.py  histograms_2d.py  images.py  plot.py  scatter.py  text.py  utils.py
src/plotter/data/: blueprint.txt  log_config.json  style.mplstyle  text_example.json
src/plotter/utils/: blueprint.txt
tests/: conftest.py  test_bars.py  test_canvas.py  test_drawable.py  test_functions.py  test_histograms.py  test_images.py  test_init.py  test_lines.py  test_scatter.py  test_text.py
utils/: text_example.txt
