[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Luca Marchetti" }]
name = "plotter"
description = "A small Python library for plotting beautiful graphs."
version = "0.2.0"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = ["matplotlib", "numpy", "pathlib"]

[tool.setuptools.packages.find]
where = ["plotter"]

[tool.setuptools.package-data]
plotter = ["data/*", "data/info/*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "trash",
]

[project.urls]
Repository = "https://github.com/lmarchetti02/plotter"
