[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Luca Marchetti" }]
name = "plotter"
description = "A small Python library for plotting beautiful graphs."
version = "0.2.0"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = ["matplotlib", "numpy", "pydantic>=2.12.5", "pytest>=9.0.2"]

[tool.setuptools.packages.find]
where = ["plotter"]

[tool.setuptools.package-data]
plotter = ["data/*", "data/info/*"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-s -vv -x"
testpaths = ["tests"]
pythonpath = "."

[dependency-groups]
dev = ["ruff>=0.15.2"]

[project.urls]
Repository = "https://github.com/lmarchetti02/plotter"
